--- a/demo-nonprofit.html
+++ b/demo-nonprofit.html
@@ -821,14 +821,14 @@
 	============================================= -->
 	<script src="js/jquery.js"></script>
 	<script src="js/plugins.min.js"></script>
-	<script src="js/jquery.calendario.js"></script>
+	<!-- <script src="js/jquery.calendario.js"></script> -->
 	<script src="demos/nonprofit/js/events.js"></script>
 
 	<!-- Footer Scripts
 	============================================= -->
 	<script src="js/functions.js"></script>
 
-	<script>
+	<!-- <script>
 		jQuery(document).ready( function($){
 			var elementParent = $('.floating-contact-wrap');
 			$('.floating-contact-btn, .btn-contact').off( 'click' ).on( 'click', function(e) {
@@ -865,7 +865,7 @@
 			$year.html( cal.getYear() );
 		};
 
-	</script>
+	</script> -->
 
 
 </body>
