--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
 
 		<!-- Floating Contact
 		============================================= -->
-		<div class="floating-contact-wrap">
+		<!-- <div class="floating-contact-wrap">
 			<div class="floating-contact-btn shadow">
 				<i class="floating-contact-icon btn-unactive icon-envelope21"></i>
 				<i class="floating-contact-icon btn-active icon-line-plus"></i>
@@ -809,7 +809,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 	</div><!-- #wrapper end -->
 
