--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 							<div class="container">
 								<div class="slider-caption">
 									<div>
-										<h2 class="nott" data-animate="fadeInUp">Help the Homeless.</h2>
-										<a href="#" data-animate="fadeInUp" data-delay="400" class="button button-rounded button-large button-light shadow nott ls0 ms-0 mt-4">Know More</a>
+										<h2 class="nott" data-animate="fadeInUp">Preporuku šefa kuhinje</h2>
+										<a href="#" data-animate="fadeInUp" data-delay="400" class="button button-rounded button-large button-light shadow nott ls0 ms-0 mt-4">Dnevna ponuda</a>
 									</div>
 								</div>
 							</div>
@@ -66,8 +66,8 @@
 							<div class="container">
 								<div class="slider-caption">
 									<div>
-										<h2 class="nott" data-animate="fadeInUp">Donate with Kindness.</h2>
-										<a href="#" data-animate="fadeInUp" data-delay="400" class="button button-rounded button-large button-light shadow nott ls0 ms-0 mt-4">Know More</a>
+										<h2 class="nott" data-animate="fadeInUp">Popularna pića</h2>
+										<a href="#" data-animate="fadeInUp" data-delay="400" class="button button-rounded button-large button-light shadow nott ls0 ms-0 mt-4">Karta pića</a>
 									</div>
 								</div>
 							</div>
@@ -101,21 +101,21 @@
 							<div class="col-md-3 px-1">
 								<a href="demo-nonprofit-about.html" class="card center border-start-0 border-end-0 border-top-0 border-bottom border-bottom shadow py-3 rounded-0 fw-semibold text-uppercase ls1">
 									<div class="card-body">
-										<i class="icon-line-align-center"></i>View Our Mission
+										<i class="icon-line-align-center"></i>Pogledaj jelovnik
 									</div>
 								</a>
 							</div>
 							<div class="col-md-3 px-1">
 								<a href="demo-nonprofit-causes.html" class="card center border-start-0 border-end-0 border-top-0 border-bottom border-bottom shadow py-3 rounded-0 fw-semibold text-uppercase ls1">
 									<div class="card-body">
-										<i class="icon-line-umbrella"></i>Top Founders
+										<i class="icon-line-umbrella"></i>Pozovi konobara
 									</div>
 								</a>
 							</div>
 							<div class="col-md-3 px-1">
 								<a href="demo-nonprofit-contact.html" class="card center border-start-0 border-end-0 border-top-0 border-bottom border-bottom shadow py-3 rounded-0 fw-semibold text-uppercase ls1">
 									<div class="card-body">
-										<i class="icon-line-mail"></i>Request a Quote
+										<i class="icon-line-mail"></i>Zatraži račun
 									</div>
 								</a>
 							</div>
