--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="swiper-slide-bg" style="background: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.5)), url('demos/nonprofit/images/slider/1.jpg') no-repeat center center; background-size: cover;"></div>
+							<div class="swiper-slide-bg" style="background: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.5)), url('slike/1.jpg') no-repeat center center; background-size: cover;"></div>
 						</div>
 						<div class="swiper-slide dark">
 							<div class="container">
@@ -71,7 +71,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="swiper-slide-bg" style="background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.8)), url('demos/nonprofit/images/slider/2.jpg') no-repeat center center; background-size: cover;"></div>
+							<div class="swiper-slide-bg" style="background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.8)), url('slike/2.jpg') no-repeat center center; background-size: cover;"></div>
 						</div>
 					</div>
 					<div class="swiper-navs">
