--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<div class="slider-caption">
 									<div>
 										<h2 class="nott" data-animate="fadeInUp">Preporuku šefa kuhinje</h2>
-										<a href="#" data-animate="fadeInUp" data-delay="400" class="button button-rounded button-large button-light shadow nott ls0 ms-0 mt-4">Dnevna ponuda</a>
+										<a href="https://tororestaurant.rs/meni/" data-animate="fadeInUp" data-delay="400" class="button button-rounded button-large button-light shadow nott ls0 ms-0 mt-4">Dnevna ponuda</a>
 									</div>
 								</div>
 							</div>
@@ -67,7 +67,7 @@
 								<div class="slider-caption">
 									<div>
 										<h2 class="nott" data-animate="fadeInUp">Popularna pića</h2>
-										<a href="#" data-animate="fadeInUp" data-delay="400" class="button button-rounded button-large button-light shadow nott ls0 ms-0 mt-4">Karta pića</a>
+										<a href="https://tororestaurant.rs/meni/" data-animate="fadeInUp" data-delay="400" class="button button-rounded button-large button-light shadow nott ls0 ms-0 mt-4">Više informacija</a>
 									</div>
 								</div>
 							</div>
@@ -86,6 +86,7 @@
 
 			</div>
 		</section>
+	
 
 		<!-- Content
 		============================================= -->
@@ -99,23 +100,23 @@
 					<div class="slider-feature w-100">
 						<div class="row justify-content-center">
 							<div class="col-md-3 px-1">
-								<a href="demo-nonprofit-about.html" class="card center border-start-0 border-end-0 border-top-0 border-bottom border-bottom shadow py-3 rounded-0 fw-semibold text-uppercase ls1">
+								<a href="https://tororestaurant.rs/meni/" class="card center border-start-0 border-end-0 border-top-0 border-bottom border-bottom shadow py-3 rounded-0 fw-semibold text-uppercase ls1">
 									<div class="card-body">
-										<i class="icon-line-align-center"></i>Pogledaj jelovnik
+										<i class="icon-menu"></i>Pogledaj jelovnik
 									</div>
 								</a>
 							</div>
 							<div class="col-md-3 px-1">
-								<a href="demo-nonprofit-causes.html" class="card center border-start-0 border-end-0 border-top-0 border-bottom border-bottom shadow py-3 rounded-0 fw-semibold text-uppercase ls1">
+								<a href="#" class="card center border-start-0 border-end-0 border-top-0 border-bottom border-bottom shadow py-3 rounded-0 fw-semibold text-uppercase ls1">
 									<div class="card-body">
-										<i class="icon-line-umbrella"></i>Pozovi konobara
+										Pozovi konobara
 									</div>
 								</a>
 							</div>
 							<div class="col-md-3 px-1">
 								<a href="demo-nonprofit-contact.html" class="card center border-start-0 border-end-0 border-top-0 border-bottom border-bottom shadow py-3 rounded-0 fw-semibold text-uppercase ls1">
 									<div class="card-body">
-										<i class="icon-line-mail"></i>Zatraži račun
+										Zatraži račun
 									</div>
 								</a>
 							</div>
@@ -758,7 +759,52 @@
 				</div> -->
 			</div>
 		</section><!-- #content end -->
+		<section id="slider" class="slider-element slider-parallax swiper_wrapper min-vh-60 min-vh-md-100 include-header" data-autoplay="7000" data-speed="650" data-loop="true">
+			<div class="slider-inner">
 
+				<div class="swiper-container swiper-parent">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide dark">
+							<div class="container">
+								<div class="slider-caption slider-caption-center">
+									<h2 data-animate="fadeInUp">Welcome to Canvas</h2>
+									<p class="d-none d-sm-block" data-animate="fadeInUp" data-delay="200">Create just what you need for your Perfect Website. Choose from a wide range of Elements &amp; simply put them on our Canvas.</p>
+								</div>
+							</div>
+							<div class="swiper-slide-bg" style="background-image: url('images/slider/swiper/1.jpg');"></div>
+						</div>
+						<div class="swiper-slide dark">
+							<div class="container">
+								<div class="slider-caption slider-caption-center">
+									<h2 data-animate="fadeInUp">Beautifully Flexible</h2>
+									<p class="d-none d-sm-block" data-animate="fadeInUp" data-delay="200">Looks beautiful &amp; ultra-sharp on Retina Screen Displays. Powerful Layout with Responsive functionality that can be adapted to any screen size.</p>
+								</div>
+							</div>
+							<div class="video-wrap">
+								<video id="slide-video" poster="images/videos/explore-poster.jpg" preload="auto" loop autoplay muted>
+									<source src='images/videos/explore.webm' type='video/webm' />
+									<source src='images/videos/explore.mp4' type='video/mp4' />
+								</video>
+								<div class="video-overlay" style="background-color: rgba(0,0,0,0.55);"></div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="container">
+								<div class="slider-caption">
+									<h2 data-animate="fadeInUp">Great Performance</h2>
+									<p class="d-none d-sm-block" data-animate="fadeInUp" data-delay="200">You'll be surprised to see the Final Results of your Creation &amp; would crave for more.</p>
+								</div>
+							</div>
+							<div class="swiper-slide-bg" style="background-image: url('images/slider/swiper/3.jpg'); background-position: center top;"></div>
+						</div>
+					</div>
+				
+					<div class="slide-number"><div class="slide-number-current"></div><span>/</span><div class="slide-number-total"></div></div>
+					<div class="swiper-pagination"></div>
+				</div>
+
+			</div>
+		</section>
 		<!-- Footer
 		============================================= -->
 		<!-- #footer end -->
