--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
 				</div> -->
 			</div>
 		</section><!-- #content end -->
-		<section id="slider" class="slider-element slider-parallax swiper_wrapper min-vh-60 min-vh-md-100 include-header" data-autoplay="7000" data-speed="650" data-loop="true">
+		<!-- <section id="slider" class="slider-element slider-parallax swiper_wrapper min-vh-60 min-vh-md-100 include-header" data-autoplay="7000" data-speed="650" data-loop="true">
 			<div class="slider-inner">
 
 				<div class="swiper-container swiper-parent">
@@ -804,7 +804,8 @@
 				</div>
 
 			</div>
-		</section>
+		</section> -->
+	
 		<!-- Footer
 		============================================= -->
 		<!-- #footer end -->
